<resources>
    <string name="app_name">FirstApp</string>
    <string name="see_first_task">See First Task</string>
    <string name="my_first_app">Моё первое приложение</string>

    <string name="see_flags">See flags</string>
    <string name="see_animation">See animation</string>
    <string name="armenia">Armenia</string>
    <string name="austria">Austria</string>
    <string name="belgium">Belgium</string>
    <string name="latvia">Latvia</string>
    <string name="denmark">Denmark</string>
    <string name="spain">Spain</string>

    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="dead">Dead</string>
    <string name="_0">0</string>
    <string name="_1_confirmed">+1 Confirmed</string>
    <string name="_1_recovered">+1 Recovered</string>
    <string name="_1_dead">+1 Dead</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="flags_and_animation">Flags and Animation</string>
    <string name="coronavirus_app">CoronaVirus App</string>

    <string name="add_flower">Add flower</string>
    <string name="remove_2">Remove 2</string>
    <string name="add_1">Add 1</string>
    <string name="remove_1">Remove 1</string>
    <string name="add_2">Add 2</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="img_url">img url</string>
    <string name="flowers_app">Flowers app</string>

    <string name="snacks_for_beer">Snacks for beer</string>
    <string name="recycler_view">Recycler View</string>

    <string name="database_usage">Database usage</string>
    <string name="write">Write note</string>
    <string name="find">Find by title</string>
    <string name="delete">Delete by title</string>
    <string name="note_title">Note title</string>
    <string name="note_date">Note date</string>
    <string name="note_text">Note text</string>
    <string name="output">Output</string>

    <string name="cryptocurrencies">Cryptocurrencies</string>
    <string name="_1_hour">1 hour: </string>
    <string name="networking">Networking</string>
    <string name="google_map">Google Map</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="change_type">Change Type</string>
</resources>
