<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.firstapp.MainActivity">

    <Button
        android:id="@+id/main_button_1"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/see_first_task"/>
    <Button
        android:id="@+id/main_button_2"
        android:layout_height="50dp"
        android:layout_width="300dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/flags_and_animation"/>
    <Button
        android:id="@+id/main_button_3"
        android:layout_height="50dp"
        android:layout_width="300dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_2"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/coronavirus_app"/>
    <Button
        android:id="@+id/main_button_4"
        android:layout_height="50dp"
        android:layout_width="300dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_3"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/flowers_app"/>
    <Button
        android:id="@+id/main_button_5"
        android:layout_height="50dp"
        android:layout_width="300dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_4"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/recycler_view"/>
    <Button
        android:id="@+id/main_button_6"
        android:layout_height="50dp"
        android:layout_width="300dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_button_5"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/database_usage"/>


</androidx.constraintlayout.widget.ConstraintLayout>