<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".flowers.MainFlowerActivity">

    <FrameLayout
        android:id="@+id/topFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <FrameLayout
        android:id="@+id/bottomFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topFragment"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/addTopFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        app:layout_constraintBottom_toTopOf="@id/addBottomFragment"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/add_1"/>
    <Button
        android:id="@+id/addBottomFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/add_2"/>
    <Button
        android:id="@+id/addFlower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/addBottomFragment"
        app:layout_constraintRight_toLeftOf="@id/removeBottomFragment"
        android:text="@string/add_flower"/>
    <Button
        android:id="@+id/removeTopFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="22dp"
        app:layout_constraintBottom_toTopOf="@id/removeBottomFragment"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/remove_1"/>
    <Button
        android:id="@+id/removeBottomFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/remove_2"/>


</androidx.constraintlayout.widget.ConstraintLayout>