<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".FlagsActivity"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/armeniaLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_height="20dp"
                android:layout_width="match_parent"
                android:background="#ff1a1a"/>
            <TextView
                android:layout_height="20dp"
                android:layout_width="match_parent"
                android:background="#1a2dff"/>
            <TextView
                android:layout_height="20dp"
                android:layout_width="match_parent"
                android:background="#ffbe1a"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/armenia"
                android:textAlignment="center"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/austriaLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_height="20dp"
                android:layout_width="match_parent"
                android:background="#FF1717"/>
            <TextView
                android:layout_height="20dp"
                android:layout_width="match_parent"
                android:background="#F8F7F7"/>
            <TextView
                android:layout_height="20dp"
                android:layout_width="match_parent"
                android:background="#FF1717"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/austria"
                android:textAlignment="center"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/belgiumLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginRight="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:orientation="horizontal">
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="match_parent"
                    android:layout_weight="33"
                    android:background="#020202"/>
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="match_parent"
                    android:layout_weight="33"
                    android:background="#ffbe1a"/>
                <TextView
                    android:layout_height="60dp"
                    android:layout_width="match_parent"
                    android:layout_weight="33"
                    android:background="#ff1a1a"/>
            </LinearLayout>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/belgium"
                android:textAlignment="center"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/latviaLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="100">
                <TextView
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="38"
                    android:background="#7E0303"/>
                <TextView
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="23"
                    android:background="#F8F7F7"/>
                <TextView
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="38"
                    android:background="#7E0303"/>
            </LinearLayout>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/latvia"
                android:textAlignment="center"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <LinearLayout
            android:id="@+id/denmarkLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginRight="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:weightSum="100">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="45"
                    android:weightSum="100">
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:layout_weight="35"
                        android:background="#DB1010" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"/>
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        android:layout_weight="55"
                        android:background="#DB1010"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="10"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="3dp"
                    android:layout_weight="45"
                    android:weightSum="100">
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="35"
                        android:background="#DB1010" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"/>
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="55"
                        android:background="#DB1010" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/denmark"
                android:textAlignment="center"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/spainLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:weightSum="100">
                <TextView
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:background="#DB1010"
                    android:layout_weight="28"/>
                <TextView
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:background="#ffbe1a"
                    android:layout_weight="44"/>
                <TextView
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:background="#DB1010"
                    android:layout_weight="28"/>
            </LinearLayout>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/spain"
                android:textAlignment="center"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>